syntax = "proto3";

package nodeproto;

option go_package = "./node";

service SyncService {
    rpc SendClickInternal (ClickRequest) returns (ClickResponse) {};
    rpc SendKeyDownInternal (KeyDownRequest) returns (KeyDownResponse) {};
    rpc SendKeyUpInternal (KeyUpRequest) returns (KeyUpResponse) {};
    rpc HeartbeatInternal (HeartbeatRequest) returns (HeartbeatResponse) {};
    rpc SendScrollInternal (ScrollRequest) returns (ScrollResponse) {};
    rpc UpdateLeader (LeaderRequest) returns (LeaderResponse) {};
}

message ClickRequest {
    string button = 1; // "left", "right", "center"
    double XPercent = 2;
    double YPercent = 3;
}

message ClickResponse {
    bool success = 1;
}


message KeyDownRequest {
    string key = 1;
}

message KeyDownResponse {
    bool success = 1;
}


message KeyUpRequest {
    string key = 1;
}

message KeyUpResponse {
    bool success = 1;
}


message ScrollRequest {
    string direction = 1;
}

message ScrollResponse {
    bool success = 1;
}

message HeartbeatRequest {
    string beat = 1;
}

message HeartbeatResponse {
    string ret = 1;
}

message LeaderRequest {
    string ip = 1;
}

message LeaderResponse{

}


// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./node.proto